fixes the table header z-index issues

--- a/client/app/styles/_default-theme.scss
+++ b/client/app/styles/_default-theme.scss
@@ -42,6 +42,8 @@ $search-border-width: 1px;
 
 $timeline-height: 55px;
 
+$z-index-table: 1;
+
 /* specific elements */
 $body-background-color: $color-purple-25;
 $label-background-color: transparentize($color-purple-25, 0.3);
